--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
 	"devDependencies": {
 		"@pumpn/eslint-config": "^15.5.3",
 		"@types/node": "^22.10.2",
+		"@typescript-to-lua/language-extensions": "^1.19.0",
 		"eslint": "9.14.0",
 		"knip": "^5.41.0",
-		"typescript": "^5.7.2"
+		"love-typescript-definitions": "^11.5.0",
+		"lua-types": "^2.13.1",
+		"typescript": "^5.8.2",
+		"typescript-to-lua": "^1.31.0"
 	},
-	"type": "module"
+	"type": "module",
+	"main": "balaum.ts"
 }
